update: ra-01h pinout configurations

--- a/device/sensor/firmware/firmware.ioc
+++ b/device/sensor/firmware/firmware.ioc
@@ -17,21 +17,20 @@ Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH0 - OSC_IN
-Mcu.Pin10=PB4
-Mcu.Pin11=PB5
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=PB9
-Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB9
+Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PH1 - OSC_OUT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
-Mcu.Pin5=PB13
-Mcu.Pin6=PB14
-Mcu.Pin7=PB15
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=16
+Mcu.Pin5=PB12
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA9
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -48,6 +47,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=DIO0
+PA10.Locked=true
+PA10.Signal=GPXTI10
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -56,6 +59,16 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA9.GPIOParameters=PinState,GPIO_Label
+PA9.GPIO_Label=RST
+PA9.Locked=true
+PA9.PinState=GPIO_PIN_SET
+PA9.Signal=GPIO_Output
+PB12.GPIOParameters=PinState,GPIO_Label
+PB12.GPIO_Label=NSS
+PB12.Locked=true
+PB12.PinState=GPIO_PIN_SET
+PB12.Signal=GPIO_Output
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
@@ -65,22 +78,6 @@ PB14.Signal=SPI2_MISO
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=ID_3
-PB4.Locked=true
-PB4.Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=ID_2
-PB5.Locked=true
-PB5.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=ID_1
-PB6.Locked=true
-PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=ID_0
-PB7.Locked=true
-PB7.Signal=GPIO_Output
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=SENSOR
 PB9.Locked=true
@@ -155,6 +152,8 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=168000000
 RCC.VcooutputI2S=96000000
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI2.CalculateBaudRate=5.25 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
