update: enable GPIO EXTI interrupts

--- a/device/sensor/firmware/firmware.ioc
+++ b/device/sensor/firmware/firmware.ioc
@@ -38,6 +38,8 @@ MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -78,10 +80,11 @@ PB14.Signal=SPI2_MISO
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
-PB9.GPIOParameters=GPIO_Label
+PB9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB9.GPIO_Label=SENSOR
+PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB9.Locked=true
-PB9.Signal=GPIO_Input
+PB9.Signal=GPXTI9
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=LED
 PC13-ANTI_TAMP.Locked=true
@@ -154,6 +157,8 @@ RCC.VCOOutputFreq_Value=168000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI2.CalculateBaudRate=5.25 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
