--- a/device/sensor/firmware/firmware.ioc
+++ b/device/sensor/firmware/firmware.ioc
@@ -11,25 +11,25 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SPI2
 Mcu.IP3=SYS
-Mcu.IP4=USART2
+Mcu.IP4=USART1
 Mcu.IPNb=5
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH0 - OSC_IN
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
+Mcu.Pin10=PA14
+Mcu.Pin11=PB6
+Mcu.Pin12=PB7
 Mcu.Pin13=PB9
 Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PH1 - OSC_OUT
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PB12
-Mcu.Pin6=PB13
-Mcu.Pin7=PB14
-Mcu.Pin8=PB15
-Mcu.Pin9=PA9
+Mcu.Pin3=PB12
+Mcu.Pin4=PB13
+Mcu.Pin5=PB14
+Mcu.Pin6=PB15
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
 Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -57,10 +57,6 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
 PA9.GPIOParameters=PinState,GPIO_Label
 PA9.GPIO_Label=RST
 PA9.Locked=true
@@ -80,6 +76,10 @@ PB14.Signal=SPI2_MISO
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PB9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB9.GPIO_Label=SENSOR
 PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -165,8 +165,8 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-USART2.IPParameters=VirtualMode
-USART2.VirtualMode=VM_ASYNC
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
