update: enable USB CDC

--- a/device/controller/firmware/firmware.ioc
+++ b/device/controller/firmware/firmware.ioc
@@ -13,8 +13,9 @@ Mcu.IP2=RCC
 Mcu.IP3=SPI2
 Mcu.IP4=SYS
 Mcu.IP5=USART1
-Mcu.IP6=USB_OTG_FS
-Mcu.IPNb=7
+Mcu.IP6=USB_DEVICE
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -28,6 +29,7 @@ Mcu.Pin15=PB8
 Mcu.Pin16=PB9
 Mcu.Pin17=VP_CRC_VS_CRC
 Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PH1 - OSC_OUT
 Mcu.Pin3=PB12
 Mcu.Pin4=PB13
@@ -36,7 +38,7 @@ Mcu.Pin6=PB15
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
 Mcu.Pin9=PA11
-Mcu.PinsNb=19
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -141,7 +143,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -183,10 +185,20 @@ SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,VID,MANUFACTURER_STRING,PRODUCT_STRING_CDC_FS,PID_CDC_FS
+USB_DEVICE.MANUFACTURER_STRING=LUFT-AQUILA
+USB_DEVICE.PID_CDC_FS=0x0514
+USB_DEVICE.PRODUCT_STRING_CDC_FS=FSK-TC
+USB_DEVICE.VID=0x1999
+USB_DEVICE.VirtualMode=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
