fix: SSR control

--- a/device/controller/firmware/firmware.ioc
+++ b/device/controller/firmware/firmware.ioc
@@ -92,17 +92,19 @@ PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
-PB8.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB8.GPIO_Label=RED
+PB8.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB8.GPIO_Label=GREEN
 PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB8.GPIO_PuPd=GPIO_NOPULL
 PB8.Locked=true
+PB8.PinState=GPIO_PIN_RESET
 PB8.Signal=GPIO_Output
-PB9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB9.GPIO_Label=GREEN
+PB9.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB9.GPIO_Label=RED
 PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB9.GPIO_PuPd=GPIO_NOPULL
 PB9.Locked=true
+PB9.PinState=GPIO_PIN_RESET
 PB9.Signal=GPIO_Output
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=LED
@@ -127,7 +129,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
